@@ -1,4 +1,9 @@
 ﻿v0.5.3
+* Fixed: Alerts: Options were not working as intended.
+* Fixed: Sicaron: Changed Trigger method for Unholy Contract.
+* Fixed: Sicaron: Typo corrected in Trigger method.
+* Added: Certain screen alerts now have perfixed countdown timer.
+* Added: Sicaron: Red flashing personal alert for 5 seconds after Blue alert.
 * Added: Grugonim: German Translation for Rampant Decay.
 * Added: Grugonim: German Translation for Corrosive Bile.
 ----
